some test results to keep you interested while the mci build runs